# haptic_os_AI_scripter

./: .gitattributes  .gitignore  .replit  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  seo_strategy.md  threat_model.md  tsconfig.json
.agents/memory/: MEMORY.md  deployment-stale-publicdir.md  (+2 more)
ai-engine/: build.bat  build.sh  engine.py  requirements.txt
attached_assets/: Pasted--2026-07-04-17-27-05-86-772460e6-System-starting-artifa_1783201033889.txt  Pasted--2026-07-15-02-04-00-41-772460e6-User-level-30-time-178_1784124908861.txt  Pasted--4-5-Running-PyInstaller-standard-110-INFO-PyInstaller-_1782701148267.txt  Pasted--4-6-Running-PyInstaller-158-INFO-PyInstaller-6-21-0-co_1781561376081.txt  Pasted--9-11-Installing-CPU-only-PyTorch-no-GPU-required-Looki_1782730555898.txt  Pasted--AIScripter-Build-Guide-for-AI-Systems-Project-Overview_1783895268134.txt  Pasted--Collecting-pip-Using-cached-pip-26-1-1-py3-none-any-wh_1778482923351.txt  Pasted--PS-C-Users-james-C-Users-james-hapticai-server-build-w_1781735752065.txt  Pasted--This-file-lists-modules-PyInstaller-was-not-able-to-fi_1783098179652.txt  Pasted--creating-build-temp-win-amd64-cpython-314-Release-imgu_1781561533748.txt  Pasted-05-12-14-50-48-node-19-DEP0060-DeprecationWarning-The-u_1778612770188.txt  Pasted-112210-INFO-Including-run-time-hook-pyi-rth-setuptools-_1783098571985.txt  Pasted-1149-INFO-Appending-datas-from-spec-1171-INFO-checking-_1781720706351.txt  (+11 more)
local-daemon/: Cargo.toml  build_linux.sh  build_macos.sh  build_windows.bat  installer.iss
local-daemon/src/: http_server.rs  main.rs
(+352 files in other folders)
